# context-convergence

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.mcc/: sessions
convergence/: __init__.py  __main__.py  cluster.py  config.py  doctor.py  engine.py  env.py  errors.py  gitutil.py  hooks.py  localstate.py  lock.py  merge.py  pathmap.py  roster.py  secrets.py  transport.py
docs/: context-convergence-design.md  sprint-0-findings.md
scripts/: converge_import.py
tests/: test_cli_upgrade.py  test_config.py  test_dryrun.py  test_engine.py  test_git_transport.py  test_hooks.py  test_incremental.py  test_lock.py  test_merge.py  test_multimachine.py  test_pathmap.py  test_safety.py  test_secrets.py  test_separators.py  test_windows_paths.py
tmp/: sm.md
