[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "context-convergence"
version = "0.1.0"
description = "Sync Claude Code project context across machines, deep-rewriting machine-local paths on checkout."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Bryon" }]
keywords = ["claude-code", "context", "sync", "multi-machine"]
# Zero runtime dependencies — stdlib only, by design.
dependencies = []

[project.scripts]
convergence = "convergence.__main__:main"

[project.urls]
Homepage = "https://github.com/"  # set to the private repo when published

[tool.setuptools]
packages = ["convergence"]
